tree-sitter-darklang/test/corpus/exhaustive/exprs/list.txt
==================
empty list
==================

[]

---

(source_file
  (expression
    (simple_expression (list_literal
      (symbol)
      (symbol)))))


==================
Single-item list
==================

["hello"]

---

(source_file
  (expression
    (simple_expression
      (list_literal
        (symbol)
        (list_content
          (expression (simple_expression (string_segment (string_literal (symbol) (string_content) (symbol))))))
        (symbol)
      )
    )
  )
)


==================
Two-item list
==================

[1L; 2L]

---

(source_file
  (expression
    (simple_expression (list_literal
      (symbol)
      (list_content
        (expression
          (simple_expression (int64_literal
            (digits
              (positive_digits))
            (symbol))))
        (symbol)
        (expression
          (simple_expression (int64_literal
            (digits
              (positive_digits))
            (symbol)))))
      (symbol)))))


==================
Multiple-item list
==================

[true; false; true; false]

---

(source_file
  (expression
    (simple_expression (list_literal
      (symbol)
      (list_content
        (expression
          (simple_expression (bool_literal)))
        (symbol)
        (expression
          (simple_expression (bool_literal)))
        (symbol)
        (expression
          (simple_expression (bool_literal)))
        (symbol)
        (expression
          (simple_expression (bool_literal))))
      (symbol)))))



==================
Nested list
==================

[[true; false]; [true; false]]

---

(source_file
  (expression
    (simple_expression (list_literal
      (symbol)
      (list_content
        (expression
          (simple_expression (list_literal
            (symbol)
            (list_content
              (expression
                (simple_expression (bool_literal)))
              (symbol)
              (expression
                (simple_expression (bool_literal))))
            (symbol))))
        (symbol)
        (expression
          (simple_expression (list_literal
            (symbol)
            (list_content
              (expression
                (simple_expression (bool_literal)))
              (symbol)
              (expression
                (simple_expression (bool_literal))))
            (symbol)))))
      (symbol)))))


==================
List with trailing semicolon
==================

[true; false;]

---

(source_file
  (expression
    (simple_expression (list_literal
      (symbol)
      (list_content
        (expression
          (simple_expression (bool_literal)))
        (symbol)
        (expression
          (simple_expression (bool_literal)))
        (symbol))
      (symbol)))))


==================
List starting with semicolon
==================

[; true; false]

---

(source_file
  (expression
    (simple_expression (list_literal
      (symbol)
      (ERROR
        (symbol))
      (list_content
        (expression
          (simple_expression (bool_literal)))
        (symbol)
        (expression
          (simple_expression (bool_literal))))
        (symbol)))))


==================
List with missing semicolon
==================

[true false]

---

(source_file
  (expression
    (simple_expression (list_literal
      (symbol)
      (list_content
        (expression
          (simple_expression (bool_literal))))
      (ERROR)
      (symbol)))))


==================
List with missing item
==================

[true; ; false]

---

(source_file
  (expression
    (simple_expression (list_literal
      (symbol)
      (list_content
        (expression
          (simple_expression (bool_literal)))
        (ERROR
          (symbol))
        (symbol)
        (expression
          (simple_expression (bool_literal))))
      (symbol)))))


==================
List with just a semicolon
==================

[;]

---

(source_file
  (expression
    (simple_expression (list_literal
      (symbol)
      (ERROR
        (symbol))
      (symbol)))))


==================
List with newlines
==================

[true
 false
 true
 false]

---

(source_file
  (expression
    (simple_expression
      (list_literal
        (symbol)
        (list_content
          (expression (simple_expression (bool_literal)))
          (newline)
          (expression (simple_expression (bool_literal)))
          (newline)
          (expression (simple_expression (bool_literal)))
          (newline)
          (expression (simple_expression (bool_literal))))
        (symbol)
      )
    )
  )
)


==================
Enum List
==================

[
  ErrorSegment.ErrorSegment.String
    "RTETODO typeChecker.toSegments"
]

---

(source_file
  (expression
    (simple_expression
      (list_literal
        (symbol)
        (list_content
          (expression
            (simple_expression
              (enum_literal
                (qualified_type_name (module_identifier) (symbol) (type_identifier))
                (symbol)
                (enum_case_identifier)
                (enum_fields
                  (indent)
                  (expression (simple_expression (string_segment (string_literal (symbol) (string_content) (symbol)))))
                  (dedent)
                )
              )
            )
          )
        )
        (symbol)
      )
    )
  )
)